--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "build.sh"
+  command = "chmod a+x ./build.sh && ./build.sh"
   functions = "functions"
   publish = "public"
 
